erDiagram
    users {
        id bigint PK
        name varchar
        email varchar
        password varchar
        remember_token varchar
        email_verified_at timestamp
        created_at timestamp
        updated_at timestamp
    }
    
    products {
        id bigint PK
        name varchar
        slug varchar
        description text
        price decimal
        stock_quantity integer
        status varchar
        created_at timestamp
        updated_at timestamp
        deleted_at timestamp
    }
    
    orders {
        id bigint PK
        user_id bigint FK
        status varchar
        total_price decimal
        shipping_address text
        billing_address text
        payment_status varchar
        created_at timestamp
        updated_at timestamp
        deleted_at timestamp
    }
    
    order_items {
        id bigint PK
        order_id bigint FK
        product_id bigint FK
        quantity integer
        unit_price decimal
        subtotal decimal
        created_at timestamp
        updated_at timestamp
        deleted_at timestamp
    }
    
    payments {
        id bigint PK
        order_id bigint FK
        payment_status varchar
        amount decimal
        status varchar
        transaction_id varchar
        created_at timestamp
        updated_at timestamp
    }

    users ||--o{ orders : places
    orders ||--|{ order_items : contains
    orders ||--o| payments : has
    products ||--o{ order_items : included_in
